# media-storage

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/src/content_store/: error.rs
apps/server/: Cargo.toml
apps/server.old/: Cargo.toml
apps/server.old/src/: di.rs  lib.rs
apps/server.old/src/error/: api.rs  mod.rs
apps/server.old/src/http/: multipart.rs
apps/server.old/src/models/v1/: media.rs  mod.rs
apps/server.old/src/routes/v1/assets/: get_list.rs
apps/server/src/: di.rs  lib.rs  main.rs
apps/server/src/bg/: media.rs
apps/server/src/error/: api.rs  macros.rs  mod.rs
apps/server/src/http/: multipart.rs
apps/server/src/models/v1/: asset.rs  media.rs
apps/server/src/routes/: mod.rs
apps/server/src/routes/v1/: mod.rs
apps/server/src/routes/v1/assets/: get_by_id.rs  get_list.rs  mod.rs  update.rs  upload.rs
apps/server/src/routes/v1/media/: get_stream.rs  mod.rs
crates/content-store/: Cargo.toml
crates/content-store/src/: lib.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  result.rs
crates/database/src/sqlite/: asset_repo.rs  media_repo.rs  mod.rs  provider.rs
crates/database/src/traits/: asset_repo.rs  media_repo.rs  mod.rs
crates/media/: Cargo.toml
crates/media/src/: image.rs  lib.rs  result.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/models/src/domains/: asset.rs  macros.rs  media.rs  mod.rs
crates/models/src/ids/: tsid.rs
crates/models/src/patch/: field.rs  macros.rs  mod.rs
crates/result/: Cargo.toml
crates/result/src/: actix.rs  error.rs  lib.rs  macros.rs
crates/storage/: Cargo.toml
crates/storage/src/: key.rs  lib.rs  result.rs  storage.rs
crates/storage/src/blob_host/: fs.rs  mod.rs  path.rs  traits.rs
crates/storage/tests/: fs_blob_host_tests.rs  storage_tests.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: di.rs  lib.rs  main.rs
crates/web-api/src/bg/: media_worker.rs  mod.rs
crates/web-api/src/models/: error.rs  mod.rs  server_info.rs
crates/web-api/src/models/v1/: asset.rs  media.rs  mod.rs
crates/web-api/src/routes/: about_server.rs  mod.rs  server_info.rs
crates/web-api/src/routes/v1/: mod.rs
crates/web-api/src/routes/v1/assets/: get_by_id.rs  mod.rs  upload.rs
crates/web-api/src/routes/v1/media/: get_stream.rs  mod.rs
crates/web-api/src/utils/: multipart.rs
libs/blob-host/: Cargo.toml
libs/blob-host/src/: error.rs  fs.rs  lib.rs
libs/blob-host/tests/: fs-host.rs
libs/blob_host/: Cargo.toml
libs/blob_host/src/: error.rs  ext.rs  fs.rs
libs/blob_host/tests/: fs_host_tests.rs
libs/content-store/: Cargo.toml
libs/content-store/src/: error.rs  key.rs  lib.rs
libs/content_store/: Cargo.toml
libs/content_store/src/: error.rs  key.rs  lib.rs
libs/content_store/tests/: content-store-tests.rs
libs/database/: Cargo.toml
libs/database/src/: error.rs  lib.rs  macros.rs  pagination.rs
libs/database/src/sqlite/: mod.rs  provider.rs
libs/database/src/traits/: asset_repo.rs  collection_repo.rs  media_repo.rs  mod.rs
libs/media/: Cargo.toml
libs/media/src/: error.rs  image.rs  lib.rs
libs/models/: Cargo.toml
libs/models/src/: lib.rs
libs/models/src/domains/: asset.rs  macros.rs  media.rs
libs/models/src/ids/: macros.rs  mod.rs
libs/models/src/patch/: field.rs  macros.rs  mod.rs
libs/shared_models/: Cargo.toml
libs/shared_models/src/: id.rs  lib.rs  macros.rs  patch.rs
libs/shared_models/src/domains/: asset.rs  collection.rs  media.rs  mod.rs
migrations/: 20260415155921_init.sql  20260510152801_add-media-thumbnail.sql
src/: di.rs  lib.rs  main.rs
src/bg/: host.rs  media.rs  mod.rs
src/bg/api/: traits.rs
src/db/: macros.rs  mod.rs  provider.rs
src/db/providers/: global.rs  mod.rs  sqlite.rs
src/db/repos/sqlite/: assets.rs  media.rs
src/db/repositories/sqlite/: assets.rs  media.rs  mod.rs
src/db/types/: pagination.rs
src/error/: actix.rs  macros.rs  mod.rs
src/files/: mod.rs
src/files/host/: mod.rs
src/files/host/core/: mod.rs  traits.rs  types.rs  writer.rs
src/files/host/fs/: mod.rs  writer.rs
src/files/storage/: mod.rs  types.rs
src/media/: image.rs
src/models/: macros.rs  mod.rs  types.rs
src/models/api/v0/: assets.rs  media.rs
src/models/domains/: assets.rs  media.rs  mod.rs
src/routes/: mod.rs
src/routes/v0/: assets.rs  media.rs  mod.rs
src/storage/: cas.rs  mod.rs
src/storage/core/: traits.rs  types.rs  writer.rs
tests/: fs_storage.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/lib/api/: Asset.ts  Media.ts  client.ts  context.tsx  index.ts
web/lib/api/modules/: asset.ts  media.ts  module.ts
web/lib/api/types/: asset.ts  index.ts  media.ts
web/lib/ui/: classname.ts  page.tsx  style.css
web/lib/ui/components/: badge.tsx  inspector.tsx  media.tsx  utils.ts
web/lib/ui/design/: Button.tsx  Input.tsx  Label.tsx  index.ts
web/lib/ui/layouts/: browse.tsx  center.tsx  frame.tsx  grid.tsx  index.ts
web/lib/ui/media/: MediaDisplay.tsx  index.ts
web/lib/ui/utils/: classname.ts  device.ts  observer.ts
web/src/: main.tsx  routing.tsx
web/src/api/: abstract-module.ts  client.ts  context.tsx  index.ts  module.ts  provider.tsx
web/src/api/backend/: index.ts
web/src/api/models/: assets.ts  media.ts
web/src/components/ui/: Date.tsx  Inspector.tsx
web/src/features/assets/: asset-inspector.tsx  asset-media.tsx  index.ts
web/src/features/common/: Date.tsx  observer.ts
web/src/features/inspector/: index.ts  inspector-view.ts  inspector.tsx
web/src/features/media/: aspect-ratio.ts  human-media-size.ts  index.ts  (+1 more)
web/src/layouts/: Browse.tsx  View.tsx  browse-layout.tsx  index.ts  minimal-layout.tsx
web/src/pages/: AssetView.tsx  Home.tsx  Upload.tsx  index.ts
web/src/providers/: api-provider.tsx  assets-list-provider.tsx  index.ts  inspector-provider.tsx  inspectorProvider.tsx
web/src/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Grid.tsx  Input.tsx  Label.tsx  Scrollable.tsx  Skeleton.tsx  index.ts
web/src/utils/: classname.ts  index.ts  logger.ts
(+107 files in other folders)
