[workspace]
resolver = "2"
members = ["crates/database", "crates/media", "crates/models"]

[workspace.package]
repository = "https://github.com/yixone/asset-shelf"
edition = "2024"
publish = false

[workspace.dependencies]
# Crates
asset-shelf-database = { path = "crates/database" }
asset-shelf-models = { path = "crates/models" }
asset-shelf-media = { path = "crates/media" }

# Actix
actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"

# Async
async-trait = "0.1.89"
futures = "0.3.32"
tokio = "1.47.1"
tokio-util = "0.7.16"

# Utils/Types
hex = "0.4.3"
bytes = "1.11.1"
uuid = "1.17.0"
chrono = "0.4.42"
tempfile = "3.27.0"
rand = "0.10.1"

# Serde
serde = "1.0.219"

# Crypto
sha2 = "0.10.9"

# Media
image = "0.25.10"

# Database
sqlx = "0.8.5"

# Tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
