[package]
name = "media-storage-server"
version = "0.1.0"

edition.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# Async
async-trait.workspace = true
futures.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["io"] }

# Utils/Types
hex.workspace = true
bytes.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# Serde
serde = { workspace = true, features = ["derive"] }

# Crypto
sha2.workspace = true

# Media
image.workspace = true

# Database
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio",
    "chrono",
    "uuid",
] }

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
