[package]
name = "shelf_server"
version = "0.1.0"

repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# Libs
shelf_blob_host = { workspace = true }
shelf_content_store = { workspace = true }
shelf_database = { workspace = true }
shelf_shared_models = { workspace = true, features = ["serde"] }
shelf_media = { workspace = true }

# Actix
actix-web.workspace = true
actix-multipart.workspace = true
actix-cors.workspace = true

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }

# Types/Utils
chrono = { workspace = true, features = ["serde"] }
hex.workspace = true

# Serde
serde = { workspace = true, features = ["derive"] }

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
