[package]
name = "ms_server"
version = "0.1.0"

repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# Libs
ms_blob_host = { workspace = true }
ms_content_store = { workspace = true }
ms_database = { workspace = true }
ms_shared_models = { workspace = true, features = ["serde"] }

# Actix
actix-web.workspace = true
actix-multipart.workspace = true
actix-cors.workspace = true

# Types
chrono = { workspace = true, features = ["serde"] }

# Serde
serde = { workspace = true, features = ["derive"] }
