[package]
name = "asset-shelf-database"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# AssetShelf
asset-shelf-models = { workspace = true, features = ["sqlx"] }

# Database
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
