[package]
name = "asset-shelf-media"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# AssetShelf
asset-shelf-result = { workspace = true }

# Async
tokio = { workspace = true, features = ["io-util"] }

# Media
image.workspace = true

# Utils/Types
bytes.workspace = true
