[package]
name = "asset-shelf-result"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[features]
serde = ["dep:serde", "serde/derive"]
actix = ["dep:actix-web", "serde"]

[dependencies]
# AssetShelf
asset-shelf-models = { workspace = true }

# Actix
actix-web = { workspace = true, optional = true }

# Serde
serde = { workspace = true, optional = true }

# Tracing
tracing.workspace = true
