[package]
name = "asset-shelf-storage"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# AssetShelf
asset-shelf-result = { workspace = true }

# Async
futures.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }

# Utils/Types
bytes.workspace = true
uuid = { workspace = true, features = ["v4"] }
hex.workspace = true

# Crypto
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
