[package]
name = "asset-shelf-web-api"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# AssetShelf
asset-shelf-database.workspace = true
asset-shelf-media = { workspace = true }
asset-shelf-models = { workspace = true, features = ["serde"] }
asset-shelf-result = { workspace = true, features = ["actix", "serde"] }
asset-shelf-storage = { workspace = true }

# Actix
actix-web.workspace = true
actix-multipart.workspace = true
actix-cors.workspace = true

# Async
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }

# Utils/Types
chrono = { workspace = true, features = ["serde"] }
hex.workspace = true

# Serde
serde = { workspace = true, features = ["derive"] }

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
