[package]
name = "shelf_blob_host"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }

# Utils/Types
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
