[package]
name = "ms_shared_models"
version = "0.1.0"
repository.workspace = true
edition.workspace = true
publish.workspace = true

[features]
serde = ["dep:serde", "uuid/serde", "chrono/serde", "serde/derive"]
sqlx = ["dep:sqlx", "sqlx/chrono", "sqlx/uuid"]

[dependencies]
# Utils/Types
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
rand = { workspace = true }

# Serde
serde = { workspace = true, optional = true }

# Database
sqlx = { workspace = true, optional = true }
